[gd_scene load_steps=4 format=3 uid="uid://d4jwm4nfj8skh"]

[ext_resource type="Script" uid="uid://cig7iccmnmjio" path="res://scripts/main_window.gd" id="1_ac7cv"]
[ext_resource type="FontFile" uid="uid://byypkayusmc3f" path="res://assets/fonts/bahnschrift.ttf" id="2_52e18"]

[sub_resource type="LabelSettings" id="LabelSettings_p671h"]
font = ExtResource("2_52e18")
font_size = 24

[node name="MainWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ac7cv")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.215686, 1)

[node name="DeleteNoteConfirm" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(263, 100)
unresizable = true
always_on_top = true
ok_button_text = "Delete"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MainUI" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/MainUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NoteList" type="Panel" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList/VBoxContainer"]
layout_mode = 2
text = "NOTES"
label_settings = SubResource("LabelSettings_p671h")
horizontal_alignment = 1

[node name="SearchNotes" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList/VBoxContainer"]
layout_mode = 2
tooltip_text = "Search through notes"
theme_override_fonts/font = ExtResource("2_52e18")
theme_override_font_sizes/font_size = 18
placeholder_text = "Search notes"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="NotesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="NewNote" type="Button" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Create a new note"
focus_mode = 0
theme_override_fonts/font = ExtResource("2_52e18")
theme_override_font_sizes/font_size = 18
text = "üìù New Note"
expand_icon = true

[node name="DeleteNote" type="Button" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/NoteList/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Delete the current note"
focus_mode = 0
theme_override_fonts/font = ExtResource("2_52e18")
theme_override_font_sizes/font_size = 18
text = "Delete Note"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="NotesTitle" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_52e18")
theme_override_font_sizes/font_size = 18
placeholder_text = "Note Title"

[node name="NotesEditor" type="TextEdit" parent="MarginContainer/VBoxContainer/MainUI/HSplitContainer/VBoxContainer" groups=["editor"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_52e18")
theme_override_font_sizes/font_size = 18

[connection signal="confirmed" from="DeleteNoteConfirm" to="." method="_delete_current_note"]
